<resources>
    <string name="app_name"> Consumer Objection </string>
    <string name="log_in">লগইন</string>
    <string name="registration">রেজিস্ট্রেশন করুন</string>
    <string name="select_language">ভাষা পরিবর্তন করুন</string>
    <string name="already_have_account"> অলরেডি একাউন্ট আছে</string>
    <string name="create_new_account"> নতুন একটি একাউন্ট তৈরি করুন</string>
    <string name="capture">ফটো তুলুন</string>
    <string name="price">মূল্য</string>
    <string name="submit">পাঠান</string>
    <string name="start_record">সাউন্ড রেকর্ড শুরু করুন</string>
    <string name="stop_record">সাউন্ড রেকর্ড শেষ করুন</string>
    <string name="enter_mail"> মেইল লিখুন </string>
    <string name="enter_password"> পাসওয়ার্ড লিখুন </string>
    <string name="enter_name"> নাম লিখুন </string>
    <string name="enter_mobile_number"> Enter mobile number </string>
    <string name="log_out">লগ আউট</string>
    <string name="want_to_exit">আপনি কি নিশ্চিতভাবে এপটি থেকে বের হতে চান? </string>
    <string name="yes">হ্যা</string>
    <string name="no">না</string>
    <string name="create_objection"> Objection করুন </string>
    <string name="see_objection"> Objection দেখুন </string>
    <string name="help"> সাহায্য </string>
    <string name="contact_us"> যোগাযোগ করুন </string>
    <string name="share"> সেয়ার করুন </string>
    <string name="share_data"> Consumer Objection এপটি খুব ভালো লেগেছে। এপস লিংক... </string>
    <string name="help_data"> খুব সহজেই আমাদের এপসি ব্যবহার করেত পারবেন। কোন প্রবলেম হলে আমাদের সাথে যোগাযোগ করুন। </string>
    <string name="date_of_birth">Enter Date of birth</string>
    <string name="id_number">National ID no</string>
    <string name="fater_name">Father`s Name</string>
    <string name="mother_name">Mother`s Name</string>
    <string name="occupation">Occupation</string>
    <string name="permanent_address">Parmanent Address</string>
    <string name="present_address">Present Address</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="accused_organization_name">Name of accused organization</string>
    <string name="accused_organization_address">Address of accused organization</string>
    <string name="district">District</string>
    <string name="division">Division</string>
    <string name="signature">signature</string>
    <string name="objection_details">Objection Details</string>
</resources>


