<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#009688"
    tools:context=".RegistrationActivity">

    <ProgressBar
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarId"
        ></ProgressBar>

    <EditText
        android:layout_margin="5dp"
        android:padding="5dp"
        android:hint="@string/enter_mail"
        android:gravity="center"
        android:background="#FAF6F6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditTextid"
        android:textSize="22dp"
        android:textColor="#004D40"
        android:textAlignment="center"
        />

    <EditText

        android:layout_margin="5dp"
        android:padding="5dp"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:background="#FAF6F6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditTextid"
        android:textSize="22dp"
        android:textColor="#004D40"
        android:inputType="textWebPassword"
        />

    <EditText
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="#FAF6F6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditTextid"
        android:textSize="22dp"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:textColor="#004D40"/>

    <EditText
        android:layout_margin="5dp"
        android:padding="5dp"
        android:gravity="center"
        android:hint="@string/enter_mobile_number"
        android:background="#FAF6F6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberEditTextid"
        android:textSize="22dp"
        android:textColor="#004D40"
        />

    <Button
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/registrationButtonid"
        android:layout_gravity="center"
        android:background="#4CAF50"
        />

    <Button
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:id="@+id/loginActivityButtonid"
        android:layout_gravity="center"
        android:background="#4CAF50"
        />

</LinearLayout>