<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateObjectionActivity">



    <ProgressBar
        android:visibility="gone"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarId"
        ></ProgressBar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/demo"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <Button
                    android:gravity="right"
                    android:id="@+id/captureButtonId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capture"
                    ></Button>
                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/captureButtonIdInfo"
                    android:padding="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/info_foreground"
                    ></ImageView>
            </LinearLayout>

            <VideoView
                android:layout_width="200px"
                android:layout_height="200px"
                android:id="@+id/videoViewId">

            </VideoView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create a video"
                    android:id="@+id/videoCaptureButtonId"
                    ></Button>

                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/createVideoButtonIdInfo"
                    android:padding="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/info_foreground"
                    ></ImageView>
            </LinearLayout>

            <Chronometer
                android:id="@+id/chronometerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="35dp"
                android:textColor="#223ABC"
                ></Chronometer>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:layout_gravity="center"
                    android:id="@+id/recordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_record"
                    ></Button>
                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/recordBtnInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/info_foreground"
                    ></ImageView>
            </LinearLayout>


            <EditText
                android:id="@+id/priceEditTextId"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                ></EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="center"
                    ></Button>

                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/submitBtnInfo"
                    android:padding="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/info_foreground"
                    ></ImageView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>